--- a/style.CSS
+++ b/style.CSS
@@ -106,19 +106,58 @@ nav ul a:hover{
 }
 
 /* Home Section */
-.home {
-  position: relative;
-}
 
-.home .box img {
+.home img {
   width: 100%;
   height: auto;
 }
 
-.home .box {
-  position: relative;
-  text-align: center;
-  color: #FFFFFF;
+/* dresh section */
+
+
+.items {
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  height: 40rem;
+  background-color: #002F5D;
+}
+
+.item{
+   width: 30rem;
+   height: 30rem;
+   padding: 2rem;
+}
+
+.item img{
+   width: 100%;
+   height: 100%;
+
+   object-fit: cover;
+   border-radius: 10px;
+   transition: transform 0.5s ease-in-out;
+}
+
+.item:hover {
+  transform: scale(1.1);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.4);
+}
+
+.item:hover img {
+  transform: scale(1.2) ;
+}
+
+@media (max-width: 768px) {
+   .items{
+       flex-direction: column;
+       height: auto;
+   }
+
+   .item img{
+       width: 20rem;
+       height: 20rem;
+       padding: 1rem;
+   }
 }
 
 /* School Section */
@@ -128,14 +167,17 @@ nav ul a:hover{
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color:#efb247;
+  background-color:white;
+  padding: 2rem;
 }
 
 .school-card{
-  padding: 3rem;
+  margin-top: 1.5rem;
   width: 30%;
-  height: 28m;
+  height: auto;
   text-align: center;
+  transition: transform 0.5s ease-in-out; 
+  
 }
 
 .school-card :hover{
@@ -143,7 +185,7 @@ nav ul a:hover{
 }
 
 .school-name{
-  padding: 1.2rem;
+  padding: 1.3rem;
 }
 
 .school-name a {
@@ -152,10 +194,17 @@ nav ul a:hover{
   font-size: 1.3rem;
 }
 
+.school-img img{
+  width: 13rem;
+  height: auto;
+  text-align: center;
+}
+
 
 
 /* Footer */
 footer {
+  height: 300px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
@@ -167,13 +216,21 @@ footer {
 footer h3 {
   margin-bottom: 10px;
   color: #FF6F61;
+  text-align: center;
+  font-size: x-large;
+}
+
+footer p{
+  text-align: center;
+  font-size: large;
 }
 
 footer a {
   color: #FFFFFF;
-  font-size: 14px;
   display: block;
   text-decoration: none;
+  text-align: center;
+  font-size: large;
 }
 
 footer a:hover {
@@ -181,10 +238,12 @@ footer a:hover {
 }
 
 .share i {
-  font-size: 20px;
-  margin-right: 10px;
+  font-size: 25px;
+  padding: 0.7rem;
+  margin-left: 40px;
   transition: color 0.3s;
   cursor: pointer;
+  text-align: center;
 }
 
 .share i:hover {
