--- a/style.CSS
+++ b/style.CSS
@@ -147,6 +147,21 @@ nav ul a:hover{
 }
 
 /* School Section */
+
+.school{
+  text-align: center;
+  padding: 2rem;
+  font-size: 3rem;
+  background-color: #003a7360;
+}
+
+.school h2{
+  color: #f8f5f5;
+  margin-bottom: 1rem;
+  text-shadow: #ddd2d2;
+  font-family: s;
+}
+
 .school-box{
   display: flex;
   flex-wrap: wrap;
