--- a/style.CSS
+++ b/style.CSS
@@ -13,7 +13,6 @@ body {
 }
 
 
-
 .items {
   display: flex;
   justify-content:center;
@@ -69,15 +68,20 @@ body {
   width: 100%;
   background-color:white;
   padding: 2rem;
+  gap: 2rem;
+  
 }
 
 .school-card{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-top: 1.5rem;
   width: 30%;
   height: auto;
-  text-align: center;
   transition: transform 0.5s ease-in-out; 
-  
+  /* border: 2px solid #003D73; */
 }
 
 .school-card :hover{
@@ -85,7 +89,8 @@ body {
 }
 
 .school-name{
-  padding: 1.3rem;
+  padding: 2.2rem;
+  /* border: 2px solid #003D73; */
 }
 
 .school-name a {
@@ -94,64 +99,76 @@ body {
   font-size: 1.3rem;
 }
 
-.school-img img{
+.school-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 13rem;
   height: auto;
-  text-align: center;
+  /* border: 2px solid #003D73; */
 }
+
 
 /* Responsive Design */
 @media (max-width: 768px) {
-  .nav {
-    flex-wrap: wrap;
+  /* Header */
+  .flex {
+    flex-direction: column;
+    align-items: flex-start;
   }
 
-  .items{
+  nav ul {
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    padding: 0;
-}
-
- .item img{
-    width: 20rem;
-    height: 20rem;
-    padding: 1rem;
-}
-
-  .search-box {
+    display: none;
+    background-color: rgba(8, 29, 66, 0.426);
     width: 100%;
-    justify-content: center;
   }
 
-  .tags {
+  #nav-links.show {
+    display: flex;
+  }
+
+  nav ul li {
     text-align: center;
+    margin: 10px 0;
   }
 
-  .school-box {
-    flex-direction: column;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
+  /* Section */
+  
+  .items{
+    display: inline-block;
+    width: 100%;
+    height: auto;
+    justify-items: center;
   }
 
-  footer {
-    text-align: center;
+  .school-card {
+    flex: 1 1 calc(100% - 30px);
+    max-width: calc(100% - 30px);
   }
+
+  #contents{
+    display: inline-block;
+    width: 100%;
+    height: auto;
+  }
+
+  .contents{
+    padding: 20px;
+  }
+  
 }
 
 @media (max-width: 480px) {
-  .logo p {
-    font-size: 20px;
+  nav ul li a {
+    font-size: 16px;
   }
 
-  .nav-links {
-    flex-wrap: wrap;
-    gap: 10px;
-  }
-
-  .nav-links a {
+  .school-card p {
     font-size: 14px;
   }
-} */
+
+  footer p {
+    font-size: 12px;
+  }
+}
