--- a/style.CSS
+++ b/style.CSS
@@ -112,6 +112,10 @@ body {
 /* Responsive Design */
 @media (max-width: 768px) {
   /* Header */
+  *{
+    width: 100vh;
+    height: auto;
+  }
   .flex {
     flex-direction: column;
     align-items: flex-start;
