--- a/style.CSS
+++ b/style.CSS
@@ -113,7 +113,7 @@ body {
 @media (max-width: 768px) {
   /* Header */
   *{
-    width: 100vh;
+    width: 100%;
     height: auto;
   }
   .flex {
