--- a/style.CSS
+++ b/style.CSS
@@ -143,6 +143,13 @@ body {
     justify-items: center;
   }
 
+  .item{
+    width: 15rem;
+    height: 15rem;
+    padding: 1rem;
+
+  }
+
   .school-card {
     flex: 1 1 calc(100% - 30px);
     max-width: calc(100% - 30px);
